--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.formserie4bd/com.example.formserie4bd.HelloApplication</mainClass>
+                            <mainClass>com.example.formserie4bd/com.example.formserie4bd.FormSerie4BD</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
